# Forwarding-TG-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/plan/: tg-forwarding-bot.md
scripts/: healthcheck.py
tg_forwarder/: __main__.py
tg_forwarder/bot/: __init__.py  admin.py  commands.py
tg_forwarder/config/: __init__.py  loader.py  schema.py
tg_forwarder/core/: __init__.py  album_batcher.py  copier.py  dedup.py  dispatcher.py  engine.py  ingress.py
tg_forwarder/features/: audit.py  preview.py  self_forward.py
tg_forwarder/plugins/: keyword_filter.py  protected_extractor.py  regex_modifier.py  watermark_remover.py
